Some more layout issue fixed.

--- a/client2/src/app/app.component.css
+++ b/client2/src/app/app.component.css
@@ -13,9 +13,13 @@
 .sidenav-container {
   min-height: 25em;
 }
-.content {
+.main {
   padding: 1em;
 }
+/deep/ .main mat-card.content {
+  min-height: 20em;
+}
+
 .active {
   background: #f5f5f5;
 }
